maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:87: error: not found: value x
    setDirection(dirMinimale(x,y))
                             ^ShortestPathMaze:87: error: not found: value y
    setDirection(dirMinimale(x,y))
                               ^